--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -6,4 +6,44 @@
   background-size: cover;
 } */
 
-.site {position: absolute;}
+.site {position: absolute;
+		padding: 40px;
+		font-family: 'Raleway', sans-serif;
+		font-weight: 100;}
+
+ul {
+	margin: 0px;
+	padding: 0px;
+	list-style-type: none;
+}
+
+a {
+	.transition
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+
+.main-menu {
+	margin-top: 40px;
+	li {
+		text-align: center;
+		padding: 10px;
+		background: rgba(0, 0, 0, 0.15);
+		margin-bottom: 10px;
+		text-transform: uppercase;
+		.transition;
+		font-size: 11px;
+		letter-spacing: 1px;
+		&:hover {
+		background: rgba(0, 0, 0, 0.55);
+	}
+	}
+
+	
+
+	a {color: #fff;
+		}
+}
