--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,29 +31,43 @@
     </head>
     <body>
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
+        <div id="z" class="site">
+          <div class="row header">
+            <div class="col-lg-4">
+              <h1 class="title"><a href="/"><img src="/assets/img/logo.png" class="img-responsive"/></a></h1>
+              <ul class="main-menu">
+                <li>
+                  <a href="/">Ephemera</a>
+                </li>
+                <li>
+                  <a href="/">About</a>
+                </li>
+                <li>
+                  <a href="/">Installation</a>
+                </li>
+                <li>
+                  <a href="/">Perfume</a>
+                </li>
+                <li>
+                  <a href="/">Sound & Videos</a>
+                </li>
+                <li>
+                  <a href="/">Contact</a>
+                </li>
+              
+              </ul>
+            
+            </div>
+          
+            <div class="col-lg-8 content">
+            {{ content }}
+            </div>
+
           </div>
 
-          {{ content }}
 
           <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
+            
         </div>
 
         <script type="text/javascript">
