--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -6,6 +6,10 @@
   background-size: cover;
 } */
 
+body {
+	background: #000;
+}
+
 .site {position: absolute;
 		padding: 40px;
 		font-family: 'Raleway', sans-serif;
