--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
         <div id="z" class="site">
           <div class="row header">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4">
               <h1 class="title"><a href="/"><img src="/assets/img/logo.png" class="img-responsive"/></a></h1>
               <ul class="main-menu">
                 <li>
@@ -59,7 +59,7 @@
             
             </div>
           
-            <div class="col-lg-8 content">
+            <div class="col-lg-8 col-md-8 content">
             {{ content }}
             </div>
 
