--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,22 +1,22 @@
-<h1 class="title"><a href="/"><img src="/assets/img/logo.png" class="img-responsive"/></a></h1>
+
 
 <ul class="main-menu">
   <li>
     <a href="/">Ephemera</a>
   </li>
   <li>
-    <a href="/">About</a>
+    <a href="/about.html">About</a>
   </li>
   <li>
-    <a href="/">Installation</a>
+    <a href="/installation.html">Installation</a>
   </li>
   <li>
-    <a href="/">Perfume</a>
+    <a href="/perfume.html">Perfume</a>
   </li>
   <li>
     <a href="/sound&videos.html">Sound & Videos</a>
   </li>
   <li>
-    <a href="/">Contact</a>
+    <a href="/contact.html">Contact</a>
   </li>
 </ul>
