--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,12 @@
     <body>
 
         <div id="z" class="site">
+
+          <div class="row">
+          <div class="col-lg-2 col-md-2 col-sm-3">
+          <h1 class="title"><a href="/"><img src="/assets/img/logo.png" class="img-responsive"/></a></h1>
+          </div>
+          </div>
           {{ content }}
 
         </div>
