--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     videojs.options.flash.swf = "video-js.swf";
   </script>
     </head>
-    <body>
+    <body class="{{ page.title | downcase }}">
 
         <div id="z" class="site">
 
