--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -16,7 +16,23 @@ body {
 	  -o-background-size: cover;
 	  background-size: cover;} 
 
-};
+}
+
+
+body.perfume {
+	
+	
+	 background: url(/assets/img/ephemera-2.jpg) no-repeat center center fixed; 
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover; 
+
+}
+
+body.about {
+	background: #000;
+}
 	
 
 #big-video-wrap {
@@ -112,22 +128,24 @@ a:hover {
 .content {
 
 	.text {
-			margin-top: 60px;
 
+		margin-top: 60px;
 		padding: 20px;
-		background: rgba(0, 0, 0, 0.25);
-		color: #fff;
+		background: rgba(255, 255, 255, 0.75);
+		color: rgb(30, 30, 30);
 		letter-spacing: 0.5px;
 		line-height: 21px;
+		font-weight: 200;
 	}
 
 	h4 {
 		text-transform: uppercase;
-		color: #fff;
+		color:  rgb(30, 30, 30);
 		font-weight: 100;
 		margin-top: 0px;
 		margin-bottom: 20px;
 		letter-spacing: 2px;
+		font-weight: 200;
 	}
 	
 
