--- a/assets/css/estilinhos.css
+++ b/assets/css/estilinhos.css
@@ -7269,6 +7269,16 @@ body {
     background-size: cover;
   }
 }
+body.perfume {
+  background: url(/assets/img/ephemera-2.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body.about {
+  background: #000;
+}
 @media (max-width: 991px) {
   #big-video-wrap {
     visibility: hidden;
@@ -7372,16 +7382,18 @@ a:hover {
 .content .text {
   margin-top: 60px;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.25);
-  color: #fff;
+  background: rgba(255, 255, 255, 0.75);
+  color: #1e1e1e;
   letter-spacing: 0.5px;
   line-height: 21px;
+  font-weight: 200;
 }
 .content h4 {
   text-transform: uppercase;
-  color: #fff;
+  color: #1e1e1e;
   font-weight: 100;
   margin-top: 0px;
   margin-bottom: 20px;
   letter-spacing: 2px;
+  font-weight: 200;
 }
