--- a/assets/css/estilinhos.css
+++ b/assets/css/estilinhos.css
@@ -7258,26 +7258,21 @@ https://github.com/videojs/video.js/blob/master/src/css/video-js.less */
   background-size: cover;
 } */
 body {
-  background: #000;
+  background: url('/assets/img/pw_maze_white.png');
 }
-@media (max-width: 991px) {
-  body {
-    background: url(/assets/img/ephemera.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  vertical-align: middle;
+  overflow: hidden;
 }
-body.perfume {
-  background: url(/assets/img/ephemera-2.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-body.about {
-  background: #000;
+.svg-content {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 @media (max-width: 991px) {
   #big-video-wrap {
@@ -7287,10 +7282,8 @@ body.about {
 }
 .site {
   position: absolute;
-  padding: 40px;
   font-family: 'Raleway', sans-serif;
-  font-weight: 100;
-  width: 95%;
+  font-weight: 300;
 }
 .title {
   padding: 0px;
@@ -7350,15 +7343,20 @@ a:hover {
 .video-list a {
   color: #fff;
 }
-.main-menu {
-  margin-top: 60px;
+.menu {
+  max-height: 110px;
+  overflow: hidden;
+  background: #fff;
+  padding-top: 45px;
+  padding-bottom: 10px;
 }
-.main-menu li a {
+.menu li {
+  float: left;
+}
+.menu li a {
   display: block;
-  text-align: center;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.15);
-  margin-bottom: 10px;
+  padding: 3px 15px 0px 15px;
+  margin-left: 10px;
   text-transform: uppercase;
   /* transition */
   -webkit-transition: all 1s linear;
@@ -7371,22 +7369,29 @@ a:hover {
   transition: all 0.75s ease-out;
   font-size: 11px;
   letter-spacing: 2px;
-  font-weight: 100;
+  font-weight: 400;
+  color: #1e1e1e;
 }
-.main-menu li a:hover {
-  background: rgba(0, 0, 0, 0.55);
+.menu li a:hover {
+  color: #a0a0a0;
 }
-.main-menu a {
-  color: #fff;
+.menu li.e-logo {
+  width: 120px;
+  margin-right: 15px;
+  margin-left: 80px;
+}
+.content {
+  padding: 80px;
 }
 .content .text {
-  margin-top: 60px;
-  padding: 20px;
-  background: rgba(255, 255, 255, 0.75);
+  background: #fff;
+  padding: 25px;
+  background: #ffffff;
   color: #1e1e1e;
   letter-spacing: 0.5px;
-  line-height: 21px;
-  font-weight: 200;
+  line-height: 19px;
+  font-size: 12px;
+  font-weight: 400;
 }
 .content h4 {
   text-transform: uppercase;
@@ -7395,5 +7400,5 @@ a:hover {
   margin-top: 0px;
   margin-bottom: 20px;
   letter-spacing: 2px;
-  font-weight: 200;
+  font-weight: 400;
 }
