--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
 
             <ul>
                   <li class="e-logo">
+                    <a href="/" class="a-logo">
                       <div class="svg-container">
                         <object type="image/svg+xml" data="samurai.svg" width="100%" height="100%" class="svg-content">
                           <svg version="1.1" viewBox="0 0 226.959 25" >
@@ -63,10 +64,11 @@
                             </svg>
                         </object>
                       </div>
+                    </a>
                     
                   </li>
                   <li>
-                    <a href="/">About</a>
+                    <a href="/about.html">About</a>
                   </li>
                   <li>
                     <a href="/">Installation</a>
