--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -124,7 +124,13 @@ a:hover {
 			&.e-logo {
 			width: 120px;
 			margin-right: 15px;
-			margin-left: 80px;
+			margin-left: 95px;
+			}
+
+			a.a-logo {
+				display: inline;
+			padding: 0px;
+			margin-left: 0px;
 			}
 
 
@@ -135,7 +141,7 @@ a:hover {
 
 .content {
 
-	padding: 80px;
+	padding: 60px 80px;
 
 	.text {
 
