--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -167,3 +167,29 @@ a:hover {
 	
 
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+	margin-bottom: 20px;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
+.logo-img {
+width: 7%;
+float: right;
+margin-top: -22px;
+@media (max-width: @screen-md-max) { margin-top: -13px;};
+margin-right: 80px;
+
+
+}
