--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,6 +84,10 @@
                   </li>
             </ul>
 
+            <div class="logo-img">
+                <img src="/assets/img/logo-img.png" class="img-responsive"/>
+            </div>
+
           </div>
           </div>
        
