--- a/assets/css/estilinhos.css
+++ b/assets/css/estilinhos.css
@@ -7407,3 +7407,29 @@ a:hover {
   letter-spacing: 2px;
   font-weight: 400;
 }
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+  margin-bottom: 20px;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.logo-img {
+  width: 7%;
+  float: right;
+  margin-top: -22px;
+  margin-right: 80px;
+}
+@media (max-width: 1199px) {
+  .logo-img {
+    margin-top: -13px;
+  }
+}
