--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
                     <a href="/">Perfume</a>
                   </li>
                   <li>
-                    <a href="/">Sound & Videos</a>
+                    <a href="/sound.html">Sound & Videos</a>
                   </li>
                   <li>
                     <a href="/">Contact</a>
