--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -5,18 +5,19 @@ layout: default
     	<div class="videoWrapper">
 
                 {{ page.videos[0] }}
+
         </div>
-    
+      <h6 class="authors">{{ page.authors[0] }}</h6>
     	<div class="videoWrapper">
 
                 {{ page.videos[1] }}
         </div>
-    
+       <h6 class="authors">{{ page.authors[1] }}</h6>
     	<div class="videoWrapper">
 
                 {{ page.videos[2] }}
         </div>
-
+        <h6 class="authors">{{ page.authors[2] }}</h6>
     </div>
 
 
