--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -173,7 +173,7 @@ a:hover {
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 .videoWrapper iframe {
 	position: absolute;
@@ -190,6 +190,11 @@ float: right;
 margin-top: -22px;
 @media (max-width: @screen-md-max) { margin-top: -13px;};
 margin-right: 80px;
+}
 
-
+h6.authors {
+	margin: 0px 0px 30px 0px;
+	color: rgb(30, 30, 30);
+	text-transform: uppercase;
+	letter-spacing: 1px;
 }
