--- a/assets/css/estilinhos.css
+++ b/assets/css/estilinhos.css
@@ -7434,8 +7434,8 @@ a:hover {
   }
 }
 h6.authors {
-  margin: 0px 0px 20px 0px;
-  color: #1e1e1e;
+  margin: 0px 0px 30px 0px;
+  color: rgba(30, 30, 30, 0.75);
   text-transform: uppercase;
   letter-spacing: 1px;
 }
