--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -194,7 +194,7 @@ margin-right: 80px;
 
 h6.authors {
 	margin: 0px 0px 30px 0px;
-	color: rgb(30, 30, 30);
+	color: rgba(30, 30, 30, 0.75);
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
