--- a/assets/css/estilinhos.css
+++ b/assets/css/estilinhos.css
@@ -7439,3 +7439,23 @@ h6.authors {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+.perfume.text {
+  min-height: 200px;
+}
+button {
+  border: 0px;
+  background: #ffffff;
+  padding: 0px;
+  margin-top: 20px;
+  /* transition */
+  -webkit-transition: all 1s linear;
+  -moz-transition: all 1s linear;
+  -o-transition: all 1s linear;
+  transition: all 1s linear;
+  -webkit-transition: all 0.75s ease-out;
+  -moz-transition: all 0.75s ease-out;
+  -o-transition: all 0.75s ease-out;
+  transition: all 0.75s ease-out;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
