--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -198,3 +198,20 @@ h6.authors {
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
+
+.perfume.text {
+	min-height: 200px;
+}
+
+button {
+	border:0px;
+	background: #ffffff;
+	padding: 0px;
+	margin-top: 20px;
+	.transition;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+
+
+
+}
