--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,16 +19,7 @@
         <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
         <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js">
         </script>
-        <script src="/bower_components/eventEmitter/EventEmitter.js"></script>
-        <script src="/bower_components/sprockets-modernizr/modernizr.js"></script>
-         <script src="/bower_components/video.js/dist/video-js/video.js"></script>
-         <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
-         <script src="/bower_components/BigVideo.js/lib/bigvideo.js">
-        </script>
-
-          <script>
-            videojs.options.flash.swf = "video-js.swf";
-          </script>
+        
     </head>
     <body class="{{ page.title | downcase }}">
 
@@ -71,16 +62,20 @@
                     <a href="/about.html">About</a>
                   </li>
                   <li>
-                    <a href="/">Installation</a>
+                    <a href="/installation.html">Installation</a>
                   </li>
                   <li>
-                    <a href="/">Perfume</a>
+                    <a href="/perfume.html">Perfume</a>
                   </li>
                   <li>
                     <a href="/sound.html">Sound & Videos</a>
                   </li>
                   <li>
-                    <a href="/">Contact</a>
+                    <a href="/contact.html">Contact</a>
+                  </li>
+
+                  <li>
+                    <a href="/">Shop</a>
                   </li>
             </ul>
 
