--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -41,7 +41,7 @@ left: 0;
 }
 
 
-.site {position: absolute;
+.site {
 		font-family: 'Raleway', sans-serif;
 		font-weight: 300;
 	}
@@ -210,7 +210,7 @@ button {
 	margin-top: 20px;
 	.transition;
 	text-transform: uppercase;
-	letter-spacing: 1px;
+	letter-spacing: 1px;	
 
 
 
