--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -6,11 +6,17 @@
   background-size: cover;
 } */
 
+html {
+    height: 100%;
+}
+
 body {
 	
-
-	
-	background: url('/assets/img/pw_maze_white.png'); 
+ .bw-gradient(@color: #F5F5F5, @start: 220, @stop: 245); 
+ height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 	 
 
 }
@@ -99,14 +105,14 @@ a:hover {
 	max-height: 110px; 
 	overflow: hidden;
 	background: #fff;
-	padding-top: 45px;
+	padding-top: 30px;
 	padding-bottom: 10px;
 	
 	li {
 			float: left;
 			a {
 			display: block;
-			padding: 3px 15px 0px 15px;
+			padding: 15px 15px 15px 15px;
 			margin-left: 10px;
 			text-transform: uppercase;
 			.transition;
@@ -125,6 +131,7 @@ a:hover {
 			width: 120px;
 			margin-right: 15px;
 			margin-left: 95px;
+			padding-top: 15px;
 			}
 
 			a.a-logo {
@@ -199,7 +206,7 @@ h6.authors {
 	letter-spacing: 1px;
 }
 
-.perfume.text {
+.perfume .text {
 	min-height: 200px;
 }
 
