--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,15 +79,14 @@
                   </li>
             </ul>
 
-            <div class="logo-img">
-                <img src="/assets/img/logo-img.png" class="img-responsive"/>
-            </div>
+            
 
           </div>
           </div>
        
           <div class="content">
           {{ content }}
+          <div class="clearfix"></div>
           </div>
         
         </div>
