--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
               <div class="text">
                 
                       <h4>{{ page.title }}</h4>
-                      {{ page.content }}
+                      {{ content }}
                  
               </div>
               
