--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -171,6 +171,39 @@ a:hover {
 		letter-spacing: 2px;
 		font-weight: 400;
 	}
+
+	a.shop-btn {
+		background: rgb(240, 240, 240);
+		padding: 25px;
+		font-size: 12px;
+		.transition;
+		display: block;
+
+		button {
+					border:0px;
+					padding: 0px;
+					.transition;
+					background:rgb(240, 240, 240);
+					text-transform: uppercase;
+					letter-spacing: 1px;	
+				}
+
+
+		&:hover {
+
+			background: rgb(200, 200, 200);
+
+			button { background: rgb(200, 200, 200);}
+
+			color: #FFFFFF;
+
+
+		}
+
+
+	}
+
+
 	
 
 }
@@ -207,18 +240,50 @@ h6.authors {
 }
 
 .perfume .text {
-	min-height: 200px;
+	min-height: 185px;
+
+	p {margin: 0px;}
+
+
 }
 
-button {
-	border:0px;
-	background: #ffffff;
-	padding: 0px;
-	margin-top: 20px;
-	.transition;
+
+
+.carousel {
+  .item {
+    left: 0 !important;
+    .transition(opacity 8s); //adjust timing here
+  }
+  .carousel-control {
+    background-image: none; // remove background gradients on controls
+  }
+  // Fade controls with items
+  .next.left,
+  .prev.right {
+    opacity: 1;
+    z-index: 1;
+  }
+  .active.left,
+  .active.right {
+    opacity: 0;
+    z-index: 2;
+  }
+}
+
+.text {
+	ul {
+		margin-top: 20px;
+	}
+
+	li {
+		margin-bottom: 10px;
+	}
+	li strong {
+	display: block;
 	text-transform: uppercase;
-	letter-spacing: 1px;	
+	letter-spacing: 1px;
+	font-size: 78%;
 
-
+	}
 
 }
