--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,30 +31,7 @@
             <ul>
                   <li class="e-logo">
                     <a href="/" class="a-logo">
-                      <div class="svg-container">
-                        <object type="image/svg+xml" data="samurai.svg" width="100%" height="100%" class="svg-content">
-                          <svg version="1.1" viewBox="0 0 226.959 25" >
-                            <g>
-                              <g>
-                                <path d="M0,25V0h20.615v2.945H2.979v7.63h9.271v2.945H2.979v8.535h18.374V25H0z"/>
-                                <path d="M46.709,12.851c-1.539,1.239-3.48,1.507-5.387,1.507H30.41V25h-2.945V0h13.856c4.685,0,7.898,2.176,7.898,7.129
-                                  C49.219,9.237,48.382,11.512,46.709,12.851z M44.5,3.481c-0.57-0.333-1.373-0.536-3.179-0.536H30.41v8.434h10.911
-                                  c2.978,0,4.953-1.071,4.953-4.284C46.275,5.691,45.739,4.218,44.5,3.481z"/>
-                                <path d="M74.409,25V13.421H58.345V25h-2.978V0h2.978v10.476h16.064V0h2.979v25H74.409z"/>
-                                <path d="M86.715,25V0h20.615v2.945H89.693v7.63h9.269v2.945h-9.269v8.535h18.372V25H86.715z"/>
-                                <path d="M136.066,25V5.857l-9.504,17.033l-9.338-17.033V25h-2.945V0h3.014l9.269,16.901L136.134,0h2.909v25H136.066z"/>
-                                <path d="M148.234,25V0h20.615v2.945h-17.637v7.63h9.273v2.945h-9.273v8.535h18.375V25H148.234z"/>
-                                <path d="M195.949,13.119c-1.238,1.038-2.276,1.273-3.817,1.541L197.957,25h-3.379l-5.792-10.34h-9.939V25h-2.945V0h12.518
-                                  c4.048,0,5.185,0.134,7.095,1.373c1.939,1.272,3.043,3.714,3.043,5.99C198.557,9.539,197.62,11.715,195.949,13.119z M190.16,2.945
-                                  h-11.313v8.77h10.778c2.24,0,3.278-0.069,4.284-0.77c1.103-0.77,1.704-2.209,1.704-3.547
-                                  C195.612,4.117,193.069,2.945,190.16,2.945z"/>
-                                <path d="M223.681,25l-4.085-8.6h-12.048l-3.947,8.6h-3.281l11.914-25h3.014l11.711,25H223.681z M213.707,3.582l-4.685,9.906h9.269
-                                  L213.707,3.582z"/>
-                              </g>
-                            </g>
-                            </svg>
-                        </object>
-                      </div>
+                      <img src="/assets/img/logo-240.png"  class="img-responsive" />
                     </a>
                     
                   </li>
@@ -75,7 +52,7 @@
                   </li>
 
                   <li>
-                    <a href="/">Shop</a>
+                    <a href="https://ephemera-by-unsound.myshopify.com/">Shop</a>
                   </li>
             </ul>
 
