--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -22,21 +22,6 @@ body {
 }
 
 
-.svg-container {
-display: inline-block;
-position: relative;
-width: 100%;
-padding-bottom: 100%;
-vertical-align: middle;
-overflow: hidden;
-}
-
-.svg-content {
-display: inline-block;
-position: absolute;
-top: 0;
-left: 0;
-}
 
 
 #big-video-wrap {
@@ -132,6 +117,7 @@ a:hover {
 			margin-right: 15px;
 			margin-left: 95px;
 			padding-top: 15px;
+			padding-bottom: 44px;
 			}
 
 			a.a-logo {
