--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,8 @@ layout: default
 		    <div class="item"><img src="/assets/img/{{ page.img[1] }}" class="img-responsive"/></div>
 		    <div class="item"><img src="/assets/img/{{ page.img[2] }}" class="img-responsive"/></div>
 		  </div>
+
+      <h6 class="authors">Bass, Noise and Drone prints by Manuel Sepulveda</h6>
   
 	</div>
             </div>
