--- a/_layouts/installation.html
+++ b/_layouts/installation.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="col-lg-8 col-md-8 col-sm-7 ">
                 <img src="/assets/img/{{ page.img[0] }}" class="img-responsive down20"/>
-                <img src="/assets/img/{{ page.img[1] }}" class="img-responsive down20"/>
+                <!--<img src="/assets/img/{{ page.img[1] }}" class="img-responsive down20"/>-->
             </div>
 
 
