--- a/assets/less/estilinhos.less
+++ b/assets/less/estilinhos.less
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900|Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400);
 
 @import "../../bower_components/bootstrap/less/bootstrap.less";
 @import "../../bower_components/BigVideo.js/css/bigvideo.css";
