--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -87,17 +87,21 @@ a:hover {
 }
 
 .menu {
-	max-height: 110px; 
+	
 	overflow: hidden;
 	background: #fff;
-	padding-top: 30px;
-	padding-bottom: 10px;
+	ul {
+		padding: 25px 0px 25px 95px; 
+	}
 	
-	li {
-			float: left;
+	li {display: table-cell;
+		vertical-align: middle;
+			text-align: center;
+			
 			a {
-			display: block;
-			padding: 15px 15px 15px 15px;
+			
+			
+			padding: 0px 20px;
 			margin-left: 10px;
 			text-transform: uppercase;
 			.transition;
@@ -113,16 +117,15 @@ a:hover {
 			}
 		
 			&.e-logo {
-			width: 120px;
-			margin-right: 15px;
+			width: 180px;
+			padding-right: 10px;
 			margin-left: 95px;
-			padding-top: 15px;
-			padding-bottom: 44px;
 			}
 
 			a.a-logo {
 				display: inline;
 			padding: 0px;
+
 			margin-left: 0px;
 			}
 
@@ -276,4 +279,8 @@ h6.authors {
 
 .installation .content img.down20 {
 	margin-bottom: 20px;
+}
+
+.kode {
+	font-family: 'Quicksand', sans-serif;
 }
