--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -119,14 +119,13 @@ a:hover {
 			&.e-logo {
 			width: 180px;
 			padding-right: 10px;
-			margin-left: 95px;
 			}
 
 			a.a-logo {
-				display: inline;
+				display: block;
 			padding: 0px;
-
 			margin-left: 0px;
+			width: 180px;
 			}
 
 
